# divas4linux-melware

./: CHANGES  INSTALL  LICENSE  Makefile  README.md
divactrl/: CHANGES  INSTALL  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  divactrl.c
divactrl/common/: capi_tbl.c  dbg_bacp.c  dbg_capi.c  dbg_cbcp.c  dbg_ccp.c  dbg_chap.c  dbg_dlog.c  dbg_eshp.c  dbg_ipcp.c  dbg_ipx.c  dbg_mppp.c  dbg_nbcp.c  dbg_oid.c  dbg_pap.c  dbg_ppp.c  dbg_rtp.c  dbg_spap.c  dbg_tapi.c  log.c  log_b.c  xdbg_ppp.c
divactrl/dchannel/: dchannel.c
divactrl/ditrace/: arib62.c  ditrace.c  memorymap.c  unarib62.c
divactrl/ditrace/common/: diva_binary.c  memorymap.h
divactrl/include/: platform.h  platform2.h
divactrl/include/common/: cau_1tr6.h  cau_q931.h  constant.h  dbgioctl.h  dimaint.h  ditrace.h
divactrl/load/: analog.c  analog.h  bri.c  bri.h  diva.h  diva_cfg.h  diva_cfg_lib.c  divaload.c  dlist.c  dsp_file.c  helpers.c  io.c  os.c  os.h  pri.c  pri.h  pri3.c  pri3.h  s4bri.c  s4bri.h  s4pri.c  s4pri.h
divactrl/load/common/: dsp_file.c  helpers.c
divactrl/mantool/: mantool.c  mlog.c  os.c  os.h
divactrl/scripts/: divas_trap.rc
firmware/: d4bripe1.bit  dap2pe1.bit  dap8pe1.bit  dbripe1.bit  ds2pri100.bit  ds4b2mon.bit  ds4bri2.bit  ds4pe100.bit  ds4pri100.bit  dsap2.bit  dsap8.bit  dsbri2f.bit  dsbri2m.bit  dsipm300.bit  dsipm600.bit  dspdload.bin.old  dspri331.bit  dsprie31.bit  sdp0.2q0  sdp1.2q0  te_1tr6.2q0  te_1tr6.2q1  te_1tr6.2q2  te_1tr6.2q3  te_1tr6.2qm  te_1tr6.pm3  te_dmlt.2q0  te_dmlt.2q1  te_dmlt.2q2  te_dmlt.2q3  te_dmlt.2qm  te_dmlt.am  te_dmlt.pm  te_dmlt.pm2  te_dmlt.qm  te_dmlt.qpm  te_etsi.sm  te_etsi.sm.4  te_test.mi
kernel/: Kconfig  Makefile  adapter.h  capi20.h  capi_man.c  capidtmf.c  capidtmf.h  capifunc.c  capifunc.h  capimain.c  cardtype.h  cfg_ifc.h  cfg_notify.h  cfg_types.h  cfglib.c  cfglib.h  cp_vers.h  dadapter.c  dadapter.h  debug.c  debug_if.h  debuglib.c  debuglib.h  di.c  di.h  di_dbg.h  di_defs.h  did_vers.h  diddfunc.c  diva.c  diva.h  diva_cfg_lib.c  diva_didd.c  diva_dma.c  diva_dma.h  diva_pci.h  divacapi.h  divahsi.c  divamnt.c  divasfunc.c  (+89 more)
scripts/: Config  Config.dlg  Support  Trace  chancapi.awk  config.xml  dialog  diva.instance.awk  diva.ip_list.awk  diva.response.awk  diva.trace.awk  diva.variables.awk  divaload  divalog  (+6 more)
(+69 files in other folders)
