dnl Process this file with autoconf to produce a configure script.
AC_INIT(divactrl.c)
AC_PREFIX_DEFAULT("/usr")

CONFIG_DATADIR=${CONFIG_DATADIR:-"/usr/lib/isdn/eicon"}
CONFIG_SBINDIR=${CONFIG_SBINDIR:-"/sbin"}
CONFIG_KERNELDIR=`eval echo ${CONFIG_KERNELDIR:-"/usr/src/linux"}`
KERNEL_DIVADIR=

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.
dnl AC_CHECK_LIB(ncurses, newpad,,
dnl	AC_CHECK_LIB(curses, newpad,,
dnl		AC_MSG_ERROR("Missing ncurses library")))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)
dnl AC_CHECK_HEADERS(ncurses.h,,
dnl	AC_CHECK_HEADERS(ncurses/curses.h,,
dnl		AC_CHECK_HEADERS(curses/ncurses.h,,
dnl			AC_CHECK_HEADERS(curses.h,,
dnl				AC_MSG_ERROR("Missing \(n\)curses.h")))))

dnl Find current kernel source
dnl AC_FIND_KERNEL
dnl AC_CHECK_HEADER($CONFIG_KERNELDIR/include/linux/isdn.h,,
dnl	AC_MSG_ERROR("$CONFIG_KERNELDIR/include/linux/isdn.h missing. Kernel installed?")
dnl )

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MMAP

dnl Optional firmware directory
AC_ARG_WITH(firmware,
	[  --with-firmware=DIR     Set dir where firmware is installed. [/usr/lib/isdn/eicon]],
	CONFIG_DATADIR="${withval}"
	AC_DEFINE(CONFIG_DATADIR,"${withval}"),
)

dnl Optional sbin directory
AC_ARG_WITH(sbin,
	[  --with-sbin=DIR         Set dir where binary is installed. [/sbin]],
	CONFIG_SBINDIR="${withval}"
	AC_DEFINE(CONFIG_SBINDIR,"${withval}"),
)

dnl Optional kernel directory
AC_ARG_WITH(kernel,
	[  --with-kernel=DIR          Set kernel dir. [/usr/src/linux]],
	CONFIG_KERNELDIR="${withval}"
	AC_DEFINE(CONFIG_KERNELDIR,"${withval}"),
)

AC_CHECK_FILE($CONFIG_KERNELDIR/drivers/isdn/eicon/xdi_msg.h,KERNEL_DIVADIR="drivers/isdn/eicon",)
AC_CHECK_FILE($CONFIG_KERNELDIR/drivers/isdn/hardware/eicon/xdi_msg.h,KERNEL_DIVADIR="drivers/isdn/hardware/eicon",)

AC_CHECK_HEADER($CONFIG_KERNELDIR/$KERNEL_DIVADIR/xdi_vers.h,,
	AC_MSG_ERROR("$CONFIG_KERNELDIR/$KERNEL_DIVADIR/xdi_vers.h missing. Diva driver sources installed?"))

AC_SUBST(INSTALL)
AC_SUBST(CONFIG_DATADIR)
AC_SUBST(CONFIG_KERNELDIR)
AC_SUBST(KERNEL_DIVADIR)
AC_SUBST(CONFIG_SBINDIR)
AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)

